[US160] Update following/followers endpoint